update git aliases

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -72,7 +72,7 @@ set-window-option -g clock-mode-colour colour64
 #
 # # status bar right contents
 set -g status-right-length 65
-set -g status-right "#[fg=colour187][#(itunesartist) - #(itunestrack)] #[fg=default][%H:%M %e-%b-%Y]"
+# set -g status-right "#[fg=colour187][#(itunesartist) - #(itunestrack)] #[fg=default][%H:%M %e-%b-%Y]"
 set -g status-interval 5
 
 # Scrolling works as expected
